fix a problem with minus in container, not sure it works

--- a/src/scss/layouts/_container.scss
+++ b/src/scss/layouts/_container.scss
@@ -13,7 +13,7 @@
         padding-right: 21px;
     }
 
-    @media (max-width: $screen-sm) {
+    @media (max-width: ($screen-sm - 1)) {
 
         padding-left: 15px;
         padding-right: 15px;
