--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,7 +8,7 @@ $gray--dark:           #595858;
 $gray--darken:         #4f5d73;
 $black:                #4F5568;
 
-$color-main:                  #0AC780;
+$color-main:                  #00147A;
 $color-secondary:             #29383B;
 $color-main-gray:             #457ba1;
 $color-success:               hsl(120, 39%, 54%);
