--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,4 +2,9 @@
 @import 'layouts/fonts';
 @import 'layouts/container';
 
+@import 'modules/header';
+@import 'modules/footer';
+@import 'modules/nav';
+
+
 @import 'libs/normalize';
