--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 
 .header {
-  border-bottom: 1px solid $gray-line;
+  border-bottom: 1px solid $color-main;
   padding: 40px 0;
 
   .container {
