add fine work of react routes, did security header

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,7 +6,7 @@ $gray--light:          #CBCCD2;
 $gray:                 #B7B7B7;
 $gray--dark:           #595858;
 $gray--darken:         #4f5d73;
-$black:                #4F5568;
+$black:                #222222;
 
 $color-main:                  #00147A;
 $color-secondary:             #29383B;
@@ -28,7 +28,7 @@ $font-size:                   2rem;
 
 $line-height:                 1.5;
 
-// $font-family:                'Roboto', -apple-system, BlinkMacSystemFont, 'Roboto', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+$font-family:                'Roboto', -apple-system, BlinkMacSystemFont, 'Roboto', 'Ubuntu', 'Droid Sans', 'Helvetica Neue', 'Arial', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
 
 
