--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -1,32 +1,34 @@
 @import '../variables';
 
 .header {
-  border-bottom: 1px solid $color-main;
-  padding: 40px 0;
 
-  .container {
+    @media (min-width: $screen-lg) {
+
+        border-bottom: 1px solid $color-main;
+    }
+}
+
+.header__content {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-  }
+    align-items: center;
+}
 
-  &__logo {
+.header__logo-link {
     display: flex;
+    flex-direction: column;    
+    text-align: center;
+    color: $color-main;
+    font-size: 3.1rem;
+    line-height: 1.1;
+    padding: 0.7rem 0;
+}
 
-    img {
-      margin-right: 15px;
-    }
+.header__nav-trigger {
+    background: none;
 
-    h1 {
-      color: #181818;
-      font-size: 24px;
-      letter-spacing: 1%;
-      text-transform: uppercase;
-      font-weight: 800;
-    }
+    @media (min-width: $screen-lg) {
 
-    p {
-      color: #7b7b7b;
+        display: none;
     }
-  }
 }
