--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,9 @@
 @import 'variables';
+
 @import 'layouts/fonts';
 @import 'layouts/container';
+@import 'layouts/base';
 
 @import 'modules/header';
-@import 'modules/footer';
 @import 'modules/nav';
-
-
-@import 'libs/normalize';
+@import 'modules/footer';
