--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,12 @@
 @import 'layouts/container';
 @import 'layouts/base';
 
+@import 'layouts/form/form';
+@import 'layouts/form/input';
+
 @import 'modules/header';
 @import 'modules/nav';
 @import 'modules/footer';
+
+@import 'sections/signin';
+
