--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'layouts/fonts';
 @import 'layouts/container';
 @import 'layouts/base';
+@import 'layouts/button';
 
 @import 'layouts/form/form';
 @import 'layouts/form/input';
