started admin page and sql requires for adding

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'layouts/container';
 @import 'layouts/base';
 @import 'layouts/button';
+@import 'layouts/section';
 
 @import 'layouts/form/form';
 @import 'layouts/form/input';
@@ -13,4 +14,7 @@
 @import 'modules/footer';
 
 @import 'sections/signin';
+@import 'sections/admin';
+@import 'sections/analyst';
+@import 'sections/security';
 
