--- a/src/scss/layouts/form/_input.scss
+++ b/src/scss/layouts/form/_input.scss
@@ -3,18 +3,31 @@
     border: none;
     font-family: inherit;
     transition: 0.3s;
+    padding: 1.6rem 1.5rem;
+    border-radius: 10px;
 
     &--small {
-        padding: 1.6rem 1.5rem;
-        border-radius: 10px;
 
         @media (min-width: $screen-lg) {
-            width: 366px;
+            width: 370px;
             font-size: 20px;
         }
 
         @media (max-width: ($screen-lg - 1)) {
             width: 200px;
+            font-size: 12px;
+        }
+    }
+
+    &--medium {
+
+        @media (min-width: $screen-lg) {
+            width: 420px;
+            font-size: 20px;
+        }
+
+        @media (max-width: ($screen-lg - 1)) {
+            width: 250px;
             font-size: 12px;
         }
     }
@@ -30,63 +43,6 @@
 
         &::placeholder {
             color: $gray;
-        }
-    }
-
-    &--gray-light {
-        border: 1px solid $gray--light;
-        color: $black;
-
-        &:focus {
-            border-color: $color-main;
-            box-shadow: 5px 5px 10px rgba(13, 19, 184, 0.31);
-            outline: none;
-        }
-
-        &::placeholder {
-            color: $gray--light;
-        }
-    }
-
-    &--error {
-        border: 1px solid $color-danger;
-
-        &:focus {
-            border: 1px solid $color-danger;
-        }
-    }
-
-    &--success {
-        border: 1px solid $color-success;
-
-        &:focus {
-            border: 1px solid $color-success;
-        }
-    }
-
-    &--search {
-        border: 1px solid $gray--light;
-        color: $black;
-        border-radius: 25px;
-
-        &:focus {
-            border-color: $color-main;
-            outline: none;
-        }
-
-        &::placeholder {
-            color: $gray--light;
-        }
-    }
-
-    &:disabled {
-        opacity: 0.5;
-        pointer-events: none;
-    }
-
-    &--m {
-        @media (min-width: $screen-md) {
-            width: 700px;
         }
     }
 }
