--- a/src/scss/sections/_signin.scss
+++ b/src/scss/sections/_signin.scss
@@ -43,6 +43,13 @@
     }
 }
 
+.signin__form-item {
+    
+    &:not(:last-child) {
+        margin-bottom: 2rem;
+    }
+}
+
 .signin__button {
     &:not(:last-child) {
         margin-bottom: 1rem;
