--- a/src/scss/sections/_admin.scss
+++ b/src/scss/sections/_admin.scss
@@ -20,9 +20,16 @@
     }
 }
 
-.admin__status {
+.admin__status, .admin__warning-status {
     display: block;
     text-align: center;
-    color: $color-danger;
     font-size: 2rem;
+}
+
+.admin__status {
+    color: $color-success;
+}
+
+.admin__warning-status {
+    color: $color-danger;
 }
