--- a/src/scss/layouts/form/_input.scss
+++ b/src/scss/layouts/form/_input.scss
@@ -6,6 +6,7 @@
     padding: 1.8rem 1.5rem;
     border-radius: 10px;
 
+
     &--small {
 
         @media (min-width: $screen-lg) {
@@ -48,6 +49,10 @@
         &::placeholder {
             color: $gray;
         }
+
+        &:invalid:required {
+            border: 1px solid $color-danger;
+        }
     }
 }
 
@@ -60,4 +65,9 @@
     font-size: 18px;
     color: $gray;
     transition: 0.3s;
+    -webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
