--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,10 @@
 @import 'variables';
 
-@import 'layouts/fonts';
-@import 'layouts/container';
 @import 'layouts/base';
 @import 'layouts/button';
+@import 'layouts/container';
+@import 'layouts/fonts';
+@import 'layouts/react-calendar';
 @import 'layouts/section';
 
 @import 'layouts/form/form';
