install react-export-excel

--- a/src/scss/sections/_signin.scss
+++ b/src/scss/sections/_signin.scss
@@ -55,4 +55,9 @@
     &:not(:last-child) {
         margin-bottom: 1rem;
     }
+
+    &--center {
+        display: block;
+        margin: auto;
+    }
 }
