--- a/src/scss/sections/_admin.scss
+++ b/src/scss/sections/_admin.scss
@@ -1,14 +1,32 @@
 .admin__title {
     
-    &:not(:last-child) {
-        margin-bottom: 4rem;
+    &--main {
+        &:not(:last-child) {
+            padding-top: 8rem;
+        }
+    }
+
+    &--section {
+        &:not(:last-child) {
+            margin-bottom: 5rem;
+        }
     }
 }
 
-.admin__forms {
+.admin__car-form {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
+}
+
+.admin__user-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
 }
 
 .admin__add-result {
@@ -16,7 +34,7 @@
 }
 
 .admin__form-item {
-    text-align: center;
+    width: fit-content;
 
     &:not(:last-child) {
         margin-bottom: 3rem;
