did security log

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,7 +9,7 @@ $gray--darken:         #4f5d73;
 $black:                #222222;
 
 $color-main:                  #00147A;
-$color-secondary:             #29383B;
+$color-secondary:             #16558f;
 $color-main-gray:             #457ba1;
 $color-success:               hsl(120, 39%, 54%);
 $color-danger:                #cc0000;
