did file info, remove

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import 'layouts/fonts';
 @import 'layouts/react-calendar';
 @import 'layouts/section';
+@import 'layouts/modal';
 
 @import 'layouts/form/form';
 @import 'layouts/form/input';
