--- a/src/scss/layouts/_modal.scss
+++ b/src/scss/layouts/_modal.scss
@@ -1,5 +1,6 @@
 .modal__backdrop {
   position: fixed;
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 1000;
   top: 0;
   left: 0;
@@ -14,11 +15,12 @@
   position: absolute;
   z-index: 1500;
   background-color: white;
-  border: 1px solid var(--gray-dark);
+  border-radius: 5px;
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
+  padding: 15px;
+  transition: all 0.3s;
 }
 
 .closeButton {
@@ -29,7 +31,7 @@
   width: 20px;
 }
 
-.content {
+.modal__content {
   width: 100%;
   height: 100%;
 }
