did async for rename file, made table style

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'layouts/react-calendar';
 @import 'layouts/section';
 @import 'layouts/modal';
+@import 'layouts/table';
 
 @import 'layouts/form/form';
 @import 'layouts/form/input';
