--- a/src/scss/layouts/_section.scss
+++ b/src/scss/layouts/_section.scss
@@ -14,6 +14,21 @@
     &--small {
 
         @media (min-width: $screen-lg) {
+            font-size: 3rem;
+        }
+
+        @media (max-width: ($screen-lg - 1)) {
+            font-size: 2rem;
+        }
+
+        &:not(:last-child) {
+            margin-bottom: 2rem;
+        }
+    }
+
+    &--medium {
+
+        @media (min-width: $screen-lg) {
             font-size: 4rem;
         }
 
@@ -26,7 +41,7 @@
         }
     }
 
-    &--medium {
+    &--large {
 
         text-align: center;
 
