--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,8 @@
 @import 'layouts/fonts';
 @import 'layouts/react-calendar';
 @import 'layouts/section';
+@import 'layouts/modal';
+@import 'layouts/table';
 
 @import 'layouts/form/form';
 @import 'layouts/form/input';
@@ -18,4 +20,6 @@
 @import 'sections/admin';
 @import 'sections/analyst';
 @import 'sections/security';
-
+@import 'sections/addCar';
+@import 'sections/addUser';
+@import 'sections/byDate';
