fix input color

--- a/src/scss/layouts/form/_input.scss
+++ b/src/scss/layouts/form/_input.scss
@@ -42,7 +42,7 @@
             outline: none;
         }
 
-        &:focus ~ .input__label {
+        &:focus ~ .input__name {
             color: $color-main;
         }
 
