--- a/src/scss/sections/_allCars.scss
+++ b/src/scss/sections/_allCars.scss
@@ -1,6 +1,7 @@
 .allCars__export-buttons {
     display: flex;
     justify-content: center;
+    cursor: pointer;
 
     &:not(:last-child) {
         margin-bottom: 2rem;
