--- a/src/scss/sections/_byDate.scss
+++ b/src/scss/sections/_byDate.scss
@@ -1,6 +1,8 @@
 .byDate__export-buttons {
     display: flex;
     justify-content: center;
+    cursor: pointer;
+
 }
 
 .byDate__export-buttons > span {
