--- a/src/scss/layouts/_table.scss
+++ b/src/scss/layouts/_table.scss
@@ -35,9 +35,12 @@
     }
 }
 
+.table__th {
+    font-weight: 400;
+}
+
 .table__th,
 .table__td {
-    font-weight: 400;
     border: none;
     padding: 20px 20px 20px 30px;
     text-align: left;
@@ -64,5 +67,14 @@
         content: '\21E9';
         display: inline-block;
         margin-left: 0.5rem;
+    }
+}
+
+.table__link {
+    font-weight: 600;
+    color: $color-main;
+
+    &:hover {
+        text-decoration: underline;
     }
 }
