--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,6 +23,7 @@
 @import 'sections/allCars';
 
 @import 'sections/security';
+@import 'sections/plateModal';
 
 @import 'sections/admin';
 @import 'sections/addCar';
