--- a/src/scss/layouts/_modal.scss
+++ b/src/scss/layouts/_modal.scss
@@ -21,6 +21,7 @@
     transform: translate(-50%, -50%);
     padding: 30px;
     transition: all 0.3s;
+    width: fit-content;
 }
 
 .closeButton {
