started change data and did page with protected route

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import 'layouts/section';
 @import 'layouts/modal';
 @import 'layouts/table';
+@import 'layouts/select';
 
 @import 'layouts/form/form';
 @import 'layouts/form/input';
@@ -23,8 +24,10 @@
 @import 'sections/allCars';
 
 @import 'sections/security';
-@import 'sections/plateModal';
 
 @import 'sections/admin';
 @import 'sections/addCar';
 @import 'sections/addUser';
+
+@import 'sections/plateModal';
+@import 'sections/changeDataModal';
