--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,4 +30,4 @@
 @import 'sections/addUser';
 
 @import 'sections/plateModal';
-@import 'sections/changeDataModal';
+@import 'sections/changeModal';
