--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,7 +27,7 @@
 
 @import 'sections/admin';
 @import 'sections/addCar';
-@import 'sections/addUser';
+@import 'sections/user';
 
 @import 'sections/plateModal';
 @import 'sections/changeModal';
