fix car adding and querys

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,7 @@
 @import 'sections/admin';
 @import 'sections/addCar';
 @import 'sections/user';
+@import 'sections/addPerson';
 
 @import 'sections/plateModal';
 @import 'sections/changeModal';
