--- a/src/scss/layouts/_button.scss
+++ b/src/scss/layouts/_button.scss
@@ -7,8 +7,8 @@
     border-radius: 10px;
     font-family: $font-family;
     opacity: 0.7;
-    // background-image: linear-gradient(rgba(0, 0, 0, 0) 0 0);
     transition: 0.3s;
+    cursor: pointer;
 
     @media (min-width: $screen-lg) {
         font-size: 20px;
