--- a/src/scss/layouts/_section.scss
+++ b/src/scss/layouts/_section.scss
@@ -4,6 +4,11 @@
         padding-top: 8rem;
         padding-bottom: 8rem;
     }
+
+    @media (max-width: $screen-lg) {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+    }
 }
 
 .title {
@@ -14,11 +19,11 @@
     &--small {
 
         @media (min-width: $screen-lg) {
-            font-size: 3rem;
+            font-size: 2.5rem;
         }
 
         @media (max-width: ($screen-lg - 1)) {
-            font-size: 2rem;
+            font-size: 1.5rem;
         }
 
         &:not(:last-child) {
@@ -29,11 +34,11 @@
     &--medium {
 
         @media (min-width: $screen-lg) {
-            font-size: 4rem;
+            font-size: 3rem;
         }
 
         @media (max-width: ($screen-lg - 1)) {
-            font-size: 3rem;
+            font-size: 2rem;
         }
 
         &:not(:last-child) {
@@ -50,7 +55,7 @@
         }
 
         @media (max-width: ($screen-lg - 1)) {
-            font-size: 4rem;
+            font-size: 3rem;
         }
     }
 }
