--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import 'layouts/modal';
 @import 'layouts/table';
 @import 'layouts/select';
+@import 'layouts/eye-icon';
 
 @import 'layouts/form/form';
 @import 'layouts/form/input';
@@ -29,6 +30,7 @@
 @import 'sections/addCar';
 @import 'sections/user';
 @import 'sections/addPerson';
+@import 'sections/changeData';
 
 @import 'sections/plateModal';
 @import 'sections/changeModal';
