--- a/src/scss/layouts/_section.scss
+++ b/src/scss/layouts/_section.scss
@@ -38,7 +38,7 @@
         }
 
         @media (max-width: ($screen-lg - 1)) {
-            font-size: 2rem;
+            font-size: 2.5rem;
         }
 
         &:not(:last-child) {
@@ -55,8 +55,12 @@
         }
 
         @media (max-width: ($screen-lg - 1)) {
-            font-size: 3rem;
+            font-size: 4rem;
         }
+    }
+
+    &--center {
+        text-align: center;
     }
 }
 
