--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -1,50 +1,52 @@
 .nav {
 
-    @media (max-width: ($screen-sm - 1)) {
-        width: 100vw;
-        left: -100vw;
+    &--active {
+        left: 0 !important;
     }
 
-    @media (min-width: $screen-sm) and (max-width: ($screen-xl - 1)) {
-        width: 300px;
-        left: -300px;
-    }
-
-    @media (max-width: ($screen-xl - 1)) {
-        position: fixed;
-        overflow-y: auto;
-        z-index: 999;
-        top: 0;
-        bottom: 0;
-        min-height: 100vh;
-        transition: left 0.6s;
-        background-color: $white;
-        padding-top: 2rem;
-        box-sizing: border-box;
-
-        &--active {
-            left: 0;
+    &--responsive { 
+        @media (max-width: ($screen-sm - 1)) {
+            width: 100vw;
+            left: -100vw;
         }
-    }
+    
+        @media (min-width: $screen-sm) and (max-width: ($screen-xl - 1)) {
+            width: 300px;
+            left: -300px;
+        }
 
-    @media (min-width: $screen-xl) {
-        position: relative;
+        @media (max-width: ($screen-xl - 1)) {
+            position: fixed;
+            overflow-y: auto;
+            z-index: 999;
+            top: 0;
+            bottom: 0;
+            min-height: 100vh;
+            transition: left 0.6s;
+            background-color: $white;
+            padding-top: 2rem;
+            box-sizing: border-box;
+        }
+    
+        @media (min-width: $screen-xl) {
+            position: relative;
+        }
     }
 }
 
 .nav__list {
     display: flex;
 
-    @media (max-width: ($screen-xl - 1)) {
-        flex-direction: column;
+    &--responsive {
+        @media (max-width: ($screen-xl - 1)) {
+            flex-direction: column;
+        }
     }
 }
 
 .nav__item {
+    text-align: center;
 
-    @media (max-width: ($screen-xl - 1)) {
-        text-align: center;
-    }
 
     &--menu {
         position: relative;
@@ -58,6 +60,7 @@
         svg {
             width: 30px;
             height: 30px;
+
             path {
                 fill: $color-main;
             }
@@ -70,6 +73,19 @@
         @media (max-width: ($screen-xl - 1)) {
             align-self: end;
             margin-right: 2rem;
+        }
+    }
+
+    &--logout {
+        background-color: $color-main;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0.7;
+        transition: 0.2s;
+
+        &:hover {
+            opacity: 1;
         }
     }
 }
@@ -90,21 +106,19 @@
 
     &--blue {
         color: $white;
-        background-color: $color-main;
-        opacity: 0.7;
-
-        &:hover {
-            opacity: 1;
-        }
     }
 
-    @media (max-width: $screen-xl) {
+    @media (max-width: $screen-lg) {
         font-size: 2rem;
         padding: 2rem;
     }
 
-    @media (min-width: $screen-xl) {
+    @media (min-width: $screen-lg) {
         padding: 2.6rem 1rem;
+    }
+
+    &--logout {
+        white-space: nowrap;
     }
 }
 
