--- a/src/scss/sections/_addCar.scss
+++ b/src/scss/sections/_addCar.scss
@@ -7,8 +7,16 @@
 
 .addCar__form {
     display: flex;
-    justify-items: center;
-    justify-content: space-between;
+
+    @media (max-width: ($screen-xl - 1)) {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    @media (min-width: $screen-xl) {
+        justify-content: space-between;
+        margin-bottom: 3rem;
+    }
 }
 
 .addCar__add-result {
@@ -18,7 +26,7 @@
 .addCar__form-item {
     width: fit-content;
 
-    &:not(:last-child) {
+    @media (max-width: ($screen-xl - 1)) {
         margin-bottom: 3rem;
     }
 }
