--- a/src/scss/sections/_addPerson.scss
+++ b/src/scss/sections/_addPerson.scss
@@ -43,7 +43,6 @@
 }
 
 .addPerson__form-item {
-    width: fit-content;
 
     @media (min-width: $screen-xl) {
         justify-content: space-around;
@@ -52,6 +51,14 @@
 
     @media (max-width: ($screen-xl - 1)) {
         margin-bottom: 3rem;
+    }
+
+    @media (min-width: $screen-sm) {
+        width: fit-content;
+    }
+
+    @media (max-width: ($screen-sm - 1)) {
+        width: 100%;
     }
 }
 
