--- a/src/scss/sections/_changeData.scss
+++ b/src/scss/sections/_changeData.scss
@@ -5,7 +5,7 @@
     @media (max-width: ($screen-sm - 1)) {
         flex-direction: column;
     }
-
+    margin-bottom: 2rem;
 }
 
 .changeData__select {
