--- a/src/scss/layouts/_modal.scss
+++ b/src/scss/layouts/_modal.scss
@@ -16,12 +16,20 @@
     z-index: 1500;
     background-color: white;
     border-radius: 10px;
-    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 30px;
     transition: all 0.3s;
-    width: fit-content;
+
+    @media (min-width: $screen-lg) {
+        width: fit-content;
+        top: 30%;
+        padding: 3rem;
+    }
+
+    @media (max-width: ($screen-lg - 1)) {
+        width: 75%;
+        padding: 2.5rem;
+    }
 }
 
 .closeButton {
