--- a/src/scss/layouts/form/_input.scss
+++ b/src/scss/layouts/form/_input.scss
@@ -5,6 +5,7 @@
     transition: 0.3s;
     padding: 1.8rem 1.5rem;
     border-radius: 10px;
+    box-sizing: border-box;
 
 
     &--small {
@@ -28,17 +29,17 @@
     &--medium {
 
         @media (min-width: $screen-xxl) {
-            width: 420px;
+            width: 440px;
             font-size: 2rem;
         }
 
-        @media (min-width: $screen-md) and (max-width: ($screen-xxl - 1)) {
+        @media (min-width: $screen-sm) and (max-width: ($screen-xxl - 1)) {
             width: 365px;
             font-size: 1.8rem;
         }
 
-        @media (max-width: ($screen-md - 1)) {
-            width: 290px;
+        @media (max-width: ($screen-sm - 1)) {
+            width: 100%;
             font-size: 16px;
         }
     }
