--- a/src/scss/sections/_changeModal.scss
+++ b/src/scss/sections/_changeModal.scss
@@ -1,10 +1,19 @@
 .changeModal__form {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    margin-bottom: 1rem;
 
-    &:not(:last-child){
-        margin-right: 15px;
+    @media (min-width: $screen-lg) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+
+        &:not(:last-child) {
+            margin-right: 1.5rem;
+        }
+    }
+
+    @media (max-width: ($screen-lg - 1)) {
+        display: flex;
+        flex-direction: column;
     }
 }
 
@@ -32,6 +41,20 @@
     align-items: center;
 }
 
-.changeModal__select {
-    width: 452px;
+.changeModal__form-item {
+    @media (max-width: ($screen-lg - 1)) {
+
+        &:not(:last-child) {
+            margin-bottom: 2.5rem;
+        }
+    }
+}
+
+.changeModal__button {
+
+    @media (max-width: ($screen-lg - 1)) {
+        &:not(:last-child) {
+            margin-bottom: 1rem;
+        }
+    }
 }
