--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -20,10 +20,21 @@
 }
 
 .user__form-item {
-    width: fit-content;
 
     &:not(:last-child) {
         margin-bottom: 3rem;
+    }
+
+    @media (max-width: ($screen-xl - 1)) {
+        margin-bottom: 3rem;
+    }
+
+    @media (min-width: $screen-sm) {
+        width: fit-content;
+    }
+
+    @media (max-width: ($screen-sm - 1)) {
+        width: 100%;
     }
 }
 
