fix inOut bugs, responsive modals

--- a/src/scss/layouts/_button.scss
+++ b/src/scss/layouts/_button.scss
@@ -9,6 +9,7 @@
     opacity: 0.7;
     transition: 0.3s;
     cursor: pointer;
+    word-break: normal;
 
     @media (min-width: $screen-lg) {
         font-size: 2rem;
