--- a/src/scss/layouts/_modal.scss
+++ b/src/scss/layouts/_modal.scss
@@ -17,6 +17,7 @@
     background-color: white;
     border-radius: 10px;
     left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
     transition: all 0.3s;
 
