--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -94,6 +94,7 @@
     font-weight: 500;
     transition: 0.2s;
     display: block;
+    width: 100%;
 
     &--white {
         color: $color-main;
