--- a/src/scss/sections/_changeModal.scss
+++ b/src/scss/sections/_changeModal.scss
@@ -15,6 +15,11 @@
         display: flex;
         flex-direction: column;
     }
+
+    @media (min-width: $screen-sm) and (max-width: ($screen-lg - 1)) {
+        align-items: center;
+    }
+
 }
 
 .changeModal__text {
@@ -36,11 +41,6 @@
     }
 }
 
-.changeModal__elems {
-    display: flex;
-    align-items: center;
-}
-
 .changeModal__form-item {
     @media (max-width: ($screen-lg - 1)) {
 
@@ -51,10 +51,19 @@
 }
 
 .changeModal__button {
+    box-sizing: border-box;
 
     @media (max-width: ($screen-lg - 1)) {
         &:not(:last-child) {
             margin-bottom: 1rem;
         }
+    }
+
+    @media (min-width: $screen-sm) and (max-width: ($screen-lg - 1)) {
+        width: 365px;
+    }
+
+    @media (max-width: ($screen-sm - 1)) {
+        width: 100%;
     }
 }
