--- a/src/scss/sections/_plateModal.scss
+++ b/src/scss/sections/_plateModal.scss
@@ -1,6 +1,41 @@
-.plateModal__form {
-    &:not(:last-child){
-        margin-right: 15px;
+.plateModal__elems {
+    display: flex;
+
+    @media (min-width: $screen-md) {
+        align-items: center;
+    }
+
+    @media (max-width: ($screen-md - 1)) {
+        flex-direction: column;
+    }
+
+    @media (min-width: $screen-sm) and (max-width: ($screen-md - 1)) {
+        align-items: center;
+    }
+}
+
+.plateModal__select,
+.plateModal__button {
+    &:not(:last-child) {
+        @media (min-width: $screen-md) {
+            margin-right: 1rem;
+        }
+
+        @media (max-width: ($screen-md - 1)) {
+            margin-bottom: 2rem;
+        }
+    }
+}
+
+.plateModal__button {
+    box-sizing: border-box;
+
+    @media (min-width: $screen-sm) and (max-width: ($screen-md - 1)) {
+        width: 365px;
+    }
+
+    @media (max-width: ($screen-sm - 1)) {
+        width: 100%;
     }
 }
 
@@ -21,9 +56,4 @@
     &:not(:last-child) {
         margin-bottom: 3rem;
     }
-}
-
-.plateModal__elems {
-    display: flex;
-    align-items: center;
 }
