--- a/src/scss/sections/_security.scss
+++ b/src/scss/sections/_security.scss
@@ -13,6 +13,8 @@
     text-align: center;
 
     @media (max-width: ($screen-md - 1)) {
+        width: 100%;
+        
         &:not(:last-child) {
             margin-bottom: 5rem;
         }
