fix analyst responsive

--- a/src/scss/sections/_addCar.scss
+++ b/src/scss/sections/_addCar.scss
@@ -1,6 +1,13 @@
 .addCar__title {
 
     &:not(:last-child) {
+        margin-bottom: 1rem;
+    }
+}
+
+.addCar__small-title {
+
+    &:not(:last-child) {
         margin-bottom: 5rem;
     }
 }
