--- a/src/scss/sections/_security.scss
+++ b/src/scss/sections/_security.scss
@@ -62,6 +62,7 @@
     background-color: $color-main;
     color: $white;
     font-weight: bold;
+    height: 70vh;
 
     @media (max-width: ($screen-xl - 1)) {
         font-size: 1.6rem;
@@ -74,12 +75,10 @@
     @media (min-width: $screen-md) {
         width: 50%;
         padding: 3rem;
-        height: 650px;
     }
 
     @media (max-width: ($screen-md - 1)) {
         width: 100%;
         padding: 2rem;
-        height: 400px;
     }
 }
